--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ email: yimo22@naver.com
 # email_title: Email (Email title override)
 # phone: Your phone number (optional)
 # phone_title: Phone (Phone title override)
-# website: Your website (eg. https://google.com)(optional)
-# website_title: Web (Website title override)
+website: https://yimo22.tistory.com
+website_title: blog
 
 # Dark Mode (true/false/never)
 darkmode: never
@@ -52,54 +52,68 @@ linkedin_username: yimo22
 # about_title: About Me (Use this to override about section title)
 about_profile_image: Directory of profile image (eg. images/profile.jpg)
 about_content: | # this will include new lines to allow paragraphs
-  Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
+  
+  개발은 마라톤과 같다고 생각합니다. 중간에 포기하면 뒤쳐지지만 옆의 동료들과 함께 꾸준히 달린다면 완주를 할 수 있는 마라톤처럼, 개발도 끊임없이 달리면서 옆의 동료들과 전진해야 한다고 생각합니다. "성장을 위한 가장 확실한 방법은 뛰어난 동료들 사이에서 있는것이다.” 라는 말처럼 주변의 뛰어난 동료들과 같이 성장하고 발전하고 싶습니다. 그리고 반복되고 중복되는 비효율적인 작업들을 자동화하고 최적화하는, 개선하는 일을 좋아하며 사건이 발생한 원인을 파악하고 해결하는 것을 지향합니다. 프로젝트의 종료 이후에도 지속적으로 코드리뷰와 디버깅을 통해서 프로젝트를 운영한 경험이 있습니다.
 
-  You can even add paragraphs by using empty lines like this and add anything else [markdown](https://www.markdownguide.org/getting-started#what-is-markdown) supports such as
-    - Lists
-    - Tables
-    - <a href="google.com">Links</a>
-    - Images ![alt text](/images/landscape-trees.jpg "Trees")
+  반복되고 중복되는 비효율적인 작업들을 자동화하고 최적화하는, 개선하는 일을 좋아하며 사건이 발생한 원인을 파악하고 해결하는 것을 지향합니다. 
+
+  Java & Spring 기반의 프로젝트들을 기반으로, 현재 C# ASP.NET SW엔지니어로 활동하고 있습니다. 
+# You can even add paragraphs by using empty lines like this and add anything else [markdown](https://www.markdownguide.org/getting-started#what-is-markdown) supports such as
+#   - Lists
+#   - Tables
+#   - <a href="google.com">Links</a>
+#   - Images ![alt text](/images/landscape-trees.jpg "Trees")
 
 content:
+  - title: Experience
+    layout: list
+    content:
+      - layout: right
+        title: 현대오토에버
+        sub_title: SW 엔지니어 
+        caption: October 2023 - present
+        link: https://www.hyundai-autoever.com/kor/main/index.do
+        quote: >
+          현대자동차그룹웨 ICT 전문 계열사 (연매출 약 3조)
+        description: | # this will include new lines to allow paragraphs
+          - 그룹웨어 (포탈, 결재) 개발/운영 담당
+
   - title: Projects # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
         border: weak  # Value of `weak` will display a weak border below this item. # Any 
                       # other value (or no value) means no border will be displayed
-        title: Project name
-        link: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-        link_text: Link Text
+        title: 추억 관리 플랫폼, Memory Capsule
+        link: https://github.com/MemoryCapsuleSanta
+        link_text: 소개페이지
         additional_links:
           - title:  Github page for project (eg. sproogen/modern-resume-theme)
             icon: fab fa-github
-            url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-          - title:  Github page for project (eg. sproogen/modern-resume-theme)
-            icon: fab fa-github
-            url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+            url: https://github.com/orgs/MemoryCapsuleSanta/repositories
         quote: >
           Short overview of the project (optional)
         description: | # this will include new lines to allow paragraphs
-          Description about the work on/with the project
-  - title: Experience
-    layout: list
-    content:
-      - layout: right
-        title: Company name
-        sub_title: Job title
-        caption: Date Range (eg. November 2016 - present)
-        link: Link to company (optional)
-        quote: >
-          Short description of the company (optional)
-        description: | # this will include new lines to allow paragraphs
-          Description of role
+          - Oauth 2.0을 활용한 Kakao 연동 로그인 기능
+          - Spring Config/Gateway/Cloud Eureka 등을 이용한 MSA 아키텍처 서버 구현
+          - Jenkins/Bash Script/Docker 를 통한 자동 CI/CD 환경 구축
+          - Prometheus, Grafana 연동을 통한 Metric Monitoring
   - title: Education
     layout: list
     content:
       - layout: top-right
-        title: Institution name
-        sub_title: Qualifications (eg. BA Performing Arts)
-        caption: Date Range (eg. 2016 - 2019)
+        title: Samsung Software Academy For Youth
+        sub_title: 삼성청년소프트웨어 아카데미 9기
+        caption: 2023 - 2023
+        quote: >
+          ''
+        description: | # this will include new lines to allow paragraphs
+          9기 Java 전공 
+
+      - layout: top-right
+        title: Computer Science & Engineering
+        sub_title: Barchelor of Science in Computer Science and Engineering
+        caption: 2017 - 2023
         quote: >
           Short institution or course description (optional)
         description: | # this will include new lines to allow paragraphs
