--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ content:
         caption: October 2023 - present
         link: https://www.hyundai-autoever.com/kor/main/index.do
         quote: >
-          현대자동차그룹웨 ICT 전문 계열사 (연매출 약 3조)
+          현대자동차그룹 ICT 전문 계열사 (연매출 약 3조)
         description: | # this will include new lines to allow paragraphs
           - 그룹웨어시스템 개발/운영 
 
